[package]
name = "nocturnal-cartographer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cartography-core = { path = './cartography-core/' }
ggez = "0.9.3"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[workspace]
members = ["cartography-core"] 
